cambiato nome_campo da immagine_url a use_gravatar

--- a/app/views/editorial/profilo_new.html.erb
+++ b/app/views/editorial/profilo_new.html.erb
@@ -9,8 +9,8 @@
       </p>
 
       <p>
-        <%= f.label :immagine_url %><br/>
-        <%= f.text_field :immagine_url %>
+        <label><%= f.radio_button :use_gravatar, true %> <%= 'Usa mail su Gravatar' %></label><br/>
+        <label><%= f.radio_button :use_gravatar, false %> <%= 'Usa tua immagine Avatar' %></label><br/>
       </p>
 
       <p>
