--- a/app/views/editorial/profilo_show.html.erb
+++ b/app/views/editorial/profilo_show.html.erb
@@ -6,57 +6,24 @@
     <div class="fs-content-layout-row">
       <div class="fs-layout-cell post-layout-item-3" style="width: 100%">
         <article class="fs-post-profile fs-article">
-
           <div class="fs-profiles-sx">
-            <p>
-              <b> Photo small </b>
-              <%= image_tag @user_profile.photo.url(:s) %>
-            </p>
-
-            <p>
-              <b> Photo large </b>
-              <%= image_tag @user_profile.photo.url(:l) %>
-            </p>
-
-            <p>
-              <b> Immagine url </b>
-              <%= h @user_profile.use_gravatar %>
-            </p>
-
-            <p>
-              <b> Qualifica </b>
-              <%= h @user_profile.fs_qualifica %>
-            </p>
+            <p><%= image_tag @user_profile.photo.url(:l) %></p>
+          </div>  <div class="fs-profiles-us">
+          <h3><%= @user_profile.user.firstname + ' ' + @user_profile.user.lastname %></h3>
+          <p><%= h @user_profile.fs_qualifica %></p>
+           <p>&nbsp;</p>
           </div>
           <div class="fs-profiles-cx">
-            <p>
-              <b> telefono </b>
-              <%= h @user_profile.fs_tel %>
-            </p>
-
-            <p>
-              <b> fax </b>
-              <%= h @user_profile.fs_fax %>
-            </p>
-
-            <p>
-              <b> skype </b>
-              <%= h @user_profile.fs_skype %>
-            </p>
-
-            <p>
-              <b> e-mail </b>
-              <%= h @user_profile.fs_mail %>
-            </p>
-
-            <p>
-              <b> url esterno </b>
-              <%= h @user_profile.external_url %>
-            </p>
-          </div>
+            <p><span> telefono </span>
+            <%= h @user_profile.fs_tel %></p>
+            <p> <span> e-mail </span><%= h @user_profile.fs_mail %></p>
+            <p> <span> fax </span><%= h @user_profile.fs_fax %></p>
+            <p><span> skype </span>  <%= h @user_profile.fs_skype %></p>
+           </div>
+          <!--
           <div class="fs-profiles-dx">
             <div>
-              <b> Mostra in ... </b> &nbsp;<br/>
+              <h5> Mostra in ... </h5> &nbsp;<br/>
               <label><%= radio_button_tag 'display_in', 1, @user_profile.display_in == 1 ? true : false, :disabled => true %> <%= 'Collaboratori' %></label><br/>
               <label><%= radio_button_tag 'display_in', 2, @user_profile.display_in == 2 ? true : false, :disabled => true %> <%= 'Responsabili' %></label><br/>
               <label><%= radio_button_tag 'display_in', 3, @user_profile.display_in == 3 ? true : false, :disabled => true %> <%= 'Direttori' %></label>
@@ -64,37 +31,25 @@
               <label><%= radio_button_tag 'display_in', 4, @user_profile.display_in == 4 ? true : false, :disabled => true %> <%= 'Non Visibile' %></label><br/>
               <br/> &nbsp;
             </div>
-
-            <p>  <%= link_to("modifica", profile_edit_path(@user_profile), :class => "fs-giallo-button") %></p>
-
           </div>
-
+ -->
           <div class="cleared"></div>
+          <p class="fs-profiles-labels">Titoli </p>
 
-          <b> titoli </b>
+          <p><%= h @user_profile.titoli %></p>
 
-          <p><%= h @user_profile.titoli %>
-          </p>
+          <p class="fs-profiles-labels"> Curriculum </p>
 
-          <p>
-            <b> Curriculum </b>
-            <%= h @user_profile.curriculum %>
-          </p>
-
+          <p><%= h @user_profile.curriculum %></p>
         </article>
-
         <br/>&nbsp; <br/>
         <article class="fs-post-profile fs-article">
-          <%= link_to("1a versione statica", chisiamo_path, :class => "fs-giallo-button") %>
-
+          <p style="text-align: center;">  <%= link_to("modifica", profile_edit_path(@user_profile), :class => "fs-giallo-button") %></p>
         </article>
-
       </div>
-
     </div>
   </div>
 </div>
-
 <%# render :partial => 'blocco_sidebar1' %>
 
 <%= render :partial => 'blocco_sidebar1' %>
