--- a/app/views/editorial/profilo_show.html.erb
+++ b/app/views/editorial/profilo_show.html.erb
@@ -43,9 +43,11 @@
           <p><%= h @user_profile.curriculum %></p>
         </article>
         <br/>&nbsp; <br/>
+        <% if User.current.ismanager? || (User.current.isauthor? && User.current == @user_profile)   %>
         <article class="fs-post-profile fs-article">
           <p style="text-align: center;">  <%= link_to("modifica", profile_edit_path(@user_profile), :class => "fs-giallo-button") %></p>
         </article>
+            <% end %>
       </div>
     </div>
   </div>
