paperclip preview js + html5

--- a/app/views/editorial/_articoli.html.erb
+++ b/app/views/editorial/_articoli.html.erb
@@ -8,7 +8,7 @@
                   <span class="fs-art-sezione">&nbsp;<%= articolo.top_section %>&nbsp;::&nbsp;<%= articolo.section %></span>
                   <span class="fs-postdateicon" style="float:right;"><%# articolo.due_date %> <%= I18n.localize(articolo.due_date.to_date, :format => :mese_anno) %></span>
                   <h5 class="fs-postheader">
-                    <%= link_to(h(smart_truncate(articolo.subject, 110)),
+                    <%= link_to(h(articolo.subject),
                                 url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s, :article_slug => h(truncate(articolo.subject, :length => 125).to_slug), :escape => false))
                     %>
                   </h5>
@@ -23,7 +23,11 @@
                               image_tag("/images/commons/sections/no-img.jpg")
                             end
                           else
+                            if FileTest.exist?("#{RAILS_ROOT}/public/images/commons/sections/#{articolo.top_section.immagine}")
                             image_tag(articolo.immagine_url, :alt => h(truncate(articolo.subject, :length => 25)))
+                            else
+                              image_tag("/images/commons/sections/no-img.jpg")
+                            end
                           end
                       %>
                       <% if articolo.se_protetto %>
@@ -44,7 +48,7 @@
                           </div>
                       <% end %>
                     </div>
-                    <%= articolo.summary %>
+                    <%= textilizable(articolo.summary )%>
                     <br/>
                     <%= link_to "Continua... ", url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s, :article_slug => h(truncate(articolo.subject, :length => 125).to_slug), :escape => false) %>
                   </div>
