--- a/app/views/editorial/profilo_show.html.erb
+++ b/app/views/editorial/profilo_show.html.erb
@@ -9,7 +9,8 @@
           <div class="fs-profiles-sx">
             <p><%= image_tag @user_profile.photo.url(:l) %></p>
           </div>  <div class="fs-profiles-us">
-          <h3><%= @user_profile.user.firstname + ' ' + @user_profile.user.lastname %></h3>
+          <%= "<h2>" + ( @user_profile.user.lastname.nil? ? "nullo":"nonullo" ) + "</h2>" %>
+          <h3><%# @user_profile.user.firstname + ' ' + @user_profile.user.lastname %></h3>
           <p><%= h @user_profile.fs_qualifica %></p>
            <p>&nbsp;</p>
           </div>
