--- a/app/views/editorial/profili_edit_js_saved.html.erb
+++ b/app/views/editorial/profili_edit_js_saved.html.erb
@@ -1,4 +1,3 @@
-<%# form_tag({:action => :update}, {:method => :put})form_tag({:action => controller.action_name, :id => @project, :path => to_path_param(@path), :rev => ''}, {:method => :get, :id => 'revision_selector'}) do -%>
 <style>
     .thumb {
         height: 120px;
@@ -7,33 +6,41 @@
     }
 </style>
 
+
+
 <% form_tag({:action => "profilo_edit", :id => @user_profile, :method => :post}, :multipart => true) do %>
-    <%= hidden_field_tag :user_id, @user_profile.user_id %>
-    <div class="fs-profiles-esx">
+    <%= hidden_field_tag :user_id, @user_profile.user %>
+    <div class="fs-profiles-sx">
+
       <div id="fs-photo-edit">
         <% if @user_profile.use_gravatar? %>
             <%= '<div id="fs-photo-edit-i"></div><div id="fs-photo-edit-a" style="display:none;">' + image_tag(@user_profile.photo.url(:l)) + '</div>
-          <div id="fs-photo-edit-g" style="display:block;">' + gravatar_for(@user_profile.user, :size => 120) + ' </div>' %>
+          <div id="fs-photo-edit-g" style="display=block;">' + gravatar_for(@user_profile.user, :size => 120) + ' </div>' %>
         <% else %>
             <%= '<div id="fs-photo-edit-i"></div><div id="fs-photo-edit-a" style="display:block;">' + image_tag(@user_profile.photo.url(:l)) + '</div>
-          <div id="fs-photo-edit-g" style="display:none;">' + gravatar_for(@user_profile.user, :size => 120) + ' </div>' %>
+          <div id="fs-photo-edit-g" style="display=none;">' + gravatar_for(@user_profile.user, :size => 120) + ' </div>' %>
         <% end %>
       </div>
 
-      <%# image_tag @user_profile.photo.url(:l) %>
-
-      <div class="fs-vuoto-inline-button  fs-profiles-esx-btn">
-        <label><%= radio_button_tag :use_gravatar, true, @user_profile.use_gravatar?, :onchange => "funct_avatar('g')" %> <%= 'Usa mail su Gravatar' %></label><br/>
-        <label><%= radio_button_tag :use_gravatar, false, !@user_profile.use_gravatar?, :onchange => "funct_avatar('a')" %> <%= 'Usa tua immagine Avatar' %></label><br/>
-        <%= file_field_tag :photo, :onchange => "handleFileSelect('handleFileSelect, false'})" %>
+      <!--
+      <p id="fs-photo-edit">
+        <b> Photo </b>
+        <%# image_tag @user_profile.photo.url(:l) %>
+      </p>
+      -->
+      <div>
+        <label><%= radio_button_tag :use_gravatar, true, @user_profile.use_gravatar?, :onchange => "funct_avatar('g')" %> <%= 'Usa profilo avatar su Gravatar.it' %></label><br/>
+        <label><%= radio_button_tag :use_gravatar, false, !@user_profile.use_gravatar?, :onchange => "funct_avatar('a')" %> <%= 'Usa una tua immagine come avatar' %></label><br/>
       </div>
-    </div>
-    <div class="fs-profiles-ecx">
+      <%= file_field_tag :photo, :id => 'photo', :onchange => "handleFileSelect('handleFileSelect, false'})" %>
+
+
       <p>
         <%= label_tag :fs_qualifica %><br/>
         <%= text_field_tag :fs_qualifica, @user_profile.fs_qualifica %>
       </p>
-
+    </div>
+    <div class="fs-profiles-cx">
       <p>
         <%= label_tag :fs_tel %><br/>
         <%= text_field_tag :fs_tel, @user_profile.fs_tel %>
@@ -55,38 +62,30 @@
       </p>
 
       <p>
-        <%= label_tag :fs_external_url %><br/>
+        <%= label_tag :external_url %><br/>
         <%= text_field_tag :external_url, @user_profile.external_url %>
       </p>
     </div>
-    <div class="fs-profiles-edx">
+    <div class="fs-profiles-dx">
 
-      <div class="fs-profiles-radio-buttons">
-        <%= label_tag l(:label_display_in) %> &nbsp;<br/>
+      <div>
+        <b> Mostra in ...  <%= @user_profile.display_in.to_s %></b> &nbsp;<br/>
         <label><%= radio_button_tag :display_in, 1, @user_profile.display_in == 1 %> <%= 'Collaboratori' %></label><br/>
         <label><%= radio_button_tag :display_in, 2, @user_profile.display_in == 2 %> <%= 'Responsabili' %></label><br/>
         <label><%= radio_button_tag :display_in, 3, @user_profile.display_in == 3 %> <%= 'Direttori' %></label><br/>
         <label><%= radio_button_tag :display_in, 4, @user_profile.display_in == 4 %> <%= 'Non Visibile' %></label><br/>
-
+        <br/> &nbsp;
       </div>
-      <p style="padding:5px 0;"></p>
 
       <p>  <%= submit_tag "salva", :action => 'profilo_edit', :class => "fs-giallo-button" %></p>
 
-      <p style="padding:5px 0;"> altrimenti</p>
-
-      <p>  <%= link_to "annulla", :back, :class => "fs-giallo-button", :style => "float:none;" %></p>
-
-      <p style="padding:5px 0;"> oppure </p>
-
-      <p>  <%= link_to("elimina profilo", profile_destroy_path(@user_profile.id), :class => "fs-rosso-button", :confirm => "conferma?") %></p>
     </div>
     <div class="cleared"></div>
     <p>
       <%= label_tag l(:label_titoli) %><br/>
+    <p>
       <%= text_area_tag :titoli, @user_profile.titoli, :cols => 20, :rows => 4, :class => 'wiki-edit' %>
     </p>
-
     <p>
       <%= label_tag l(:label_curriculum) %><br/>
       <%= text_area_tag :curriculum, @user_profile.curriculum, :cols => 20, :rows => 6, :class => 'wiki-edit' %>
@@ -94,9 +93,10 @@
 
 
 <% end %>
-
-<%= wikitoolbar_for 'titoli' %>
+<p>  <%= link_to("elimina profilo", profile_destroy_path(@user_profile.id), :class => "fs-rosso-button", :confirm => "conferma?") %></p>
+<%= wikitoolbar_for 'user_profile_curriculum' %>
 <%= wikitoolbar_for 'curriculum' %>
+
 
 <script>
     // valori accettati 1= Immagine Avatar Papareclip , 0 = Immagine Gravatar , 2  = Nuova immagine upload
@@ -105,11 +105,13 @@
             document.getElementById('fs-photo-edit-i').style.display = 'none';
             document.getElementById('fs-photo-edit-a').style.display = 'none';
             document.getElementById('fs-photo-edit-g').style.display = 'block';
+            alert("zero" + val);
         }
         else if (val == 'a') {
             document.getElementById('fs-photo-edit-i').style.display = 'none';
             document.getElementById('fs-photo-edit-a').style.display = 'block';
             document.getElementById('fs-photo-edit-g').style.display = 'none';
+            alert("uno" + val);
         }
         else if (val == 'i') {
             document.getElementById('fs-photo-edit-i').style.display = 'block';
